<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_load_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tilt Mobile"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_load_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sort"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_load_notification"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/circle_notification"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@id/iv_load_filter"
                    app:layout_constraintEnd_toEndOf="@id/iv_load_filter"
                    app:layout_constraintTop_toTopOf="@id/iv_load_filter" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_load_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_load_trailer_type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/act_load_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/trailer_act_hint"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_load_commodity_types"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_load_trailer_type">

                    <AutoCompleteTextView
                        android:id="@+id/act_load_commodity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/commodity_act_hint"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_load_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:chipSpacingHorizontal="8dp"
                    app:layout_constraintTop_toBottomOf="@id/til_load_commodity_types"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_load_date"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_date"
                        app:chipIcon="@drawable/ic_date_range"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_load_price"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_chip"
                        app:chipIcon="@drawable/ic_money"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_load_weight"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_chip"
                        app:chipIcon="@drawable/ic_weight"
                        app:chipIconVisible="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_load_miles"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/miles_chip"
                        app:chipIcon="@drawable/ic_miles"
                        app:chipIconVisible="true" />

                </com.google.android.material.chip.ChipGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_load_loads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_load_tool_bar"
        tools:listitem="@layout/view_holder_load" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_load_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_search"
        app:tint="@color/white" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_load_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/fab_load_search"
        app:layout_constraintEnd_toStartOf="@id/fab_load_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager_loads_views"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/view_loads_scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".55"
        android:background="@color/black"
        android:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>